--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-1 hour">9AM</div>
+        <div class="col-1 hour" id="first">9AM</div>
         <div class="col-10" id="row-1">#</div>
         <div class="col-1 saveBtn">#</div>
       </div>
@@ -76,7 +76,6 @@
         <div class="col-10" id="row-9">#</div>
         <div class="col-1 saveBtn">#</div>
       </div>
-      d
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
