--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-1 hour" id="first" data-pineapple ="9">9am</div>
         <div class="col-10" id="row-1"></div>
-        <div class="col-1 saveBtn">#</div>
+        <button class="col-1 saveBtn">#</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="10">10am</div>
