--- a/index.html
+++ b/index.html
@@ -33,48 +33,48 @@
     <div class="container">
       <div class="row">
         <div class="col-1 hour" id="first" data-pineapple ="9">9am</div>
-        <div class="col-10" id="row-1"></div>
-        <button class="col-1 saveBtn">#</button>
+        <textarea class="col-10 click" id="row-1"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="10">10am</div>
-        <div class="col-10" id="row-2">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-2"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="11">11am</div>
-        <div class="col-10" id="row-3">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-3"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="12">12pm</div>
-        <div class="col-10" id="row-4">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-4"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="13">1pm</div>
-        <div class="col-10" id="row-5">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-5"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="14">2pm</div>
-        <div class="col-10" id="row-6">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-6"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="15">3pm</div>
-        <div class="col-10" id="row-7">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-7"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="16">4pm</div>
-        <div class="col-10" id="row-8">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-8"></textarea>
+        <button class="col-1 saveBtn">+</button>
       </div>
       <div class="row">
         <div class="col-1 hour" data-pineapple ="17">5pm</div>
-        <div class="col-10" id="row-9">#</div>
-        <div class="col-1 saveBtn">#</div>
+        <textarea class="col-10 click" id="row-9"></textarea>
+        <button class="col-1 saveBtn">+</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
